--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@expo/webpack-config": "^19.0.0",
     "expo": "^49.0.3",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated": "^3.5.4",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3"
+    "@babel/core": "^7.19.3",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.8",
+    "@types/react": "^18.2.37",
+    "@types/react-test-renderer": "^18.0.6",
+    "typescript": "^5.2.2"
   },
   "name": "with-reanimated",
   "version": "1.0.0",
